--- a/README
+++ b/README
@@ -1,1 +1,7 @@
 Weather-Alert-Bot is a Reddit bot intended to be used for location specific subreddits to provide weather alerts.
+
+Required packages: praw v3.4.1, weatheralerts v0.5
+
+must use weatheralerts 0.5 use this command to install:
+pip install git+https://github.com/zebpalmer/WeatherAlerts.git
+normal pip does not work.
